grid layout set

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <title>Main</title>
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/tachyons/4.11.1/tachyons.min.css"
     />
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="src/styles.min.css" />
     <script src="dist/main.js"></script>
   </head>
   <body>
